# Pi-ATX-Power-Supply

./: README.md
app/: CMakeLists.txt  main.c  plug.sh  read.sh
app/include/: DeviceReader.hpp  MosquittoHub.hpp  callbacktimer.h  device.h
app/mosquitto-cpp/: CMakeLists.txt  mosquitto-cppConfig.cmake
app/mosquitto-cpp/include/: .mosquitto++.hpp.swp  IMosquittoCpp.hpp  mosquitto++.hpp
app/powermeter/: .main.cpp.swp  CMakeLists.txt  DeviceReader.cpp  MosquittoHub.cpp  callbacktimer.cpp  main.cpp
app/src/: .device.cpp.swp  .main.cpp.swp  device.cpp  main.cpp
datasheet/: datasheet.tex
kernel_driver/: Makefile  at91-sama5d2_xplained.dts  modules.order  pac193x-overlay.dts  pac193x.c  pac193x.dtbo  pac193x.ko  pac193x.mod  pac193x.mod.c  pac193x.txt  readme.txt
web-ui/: web.py  web2.py
